--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -162,6 +162,7 @@
                         <a href="https://twitter.com/martinmatics100"><i class="fa-brands fa-twitter"></i></i></a>
                         <a href="https://www.linkedin.com/in/martin-nwatu/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://wa.link/p4p6j9"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://github.com/martinmatics100"><i class="fa-brands fa-github"></i></a>
                     </div>
                     <a href="Images/Martin Chukwuemeka CV2.pdf" download class="btn btn2">Download CV</a>
                 </div>
