--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -29,8 +29,6 @@
             </div>
         </div>
     </div>
-
-
     <!-- ----------------------------------about--------------------- -->
     <div id="about">
         <div class="container">
@@ -84,9 +82,10 @@
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>I create beautiful and user-friendly websites that are engaging and easy to use.</p>
-                    <a href="">Learn more</a>
+                    <h2>Web Application Development</h2>
+                    <p>I specialize in developing robust and interactive web applications using C# and
+                         industry-leading frameworks like ASP.NET, ASP.NET Core, or Blazor.</p>
+                    <a href="services.html#serve">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-sharp fa-solid fa-crop"></i>
@@ -96,30 +95,30 @@
                         Using my expertise in HTML, CSS, and JavaScript, 
                         I create seamless and engaging experiences that captivate
                          users and deliver a smooth navigation flow.</p>
-                         <a href="">Learn more</a>
+                         <a href="frontend.html#front">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
-                    <h2>App Design</h2>
-                    <p>I focus on creating intuitive and visually compelling interfaces for mobile applications. 
-                        By combining user-centered design principles with a deep understanding of mobile platform guidelines, 
-                        I craft seamless and delightful experiences that make using the app a pleasure for users.</p>
-                        <a href="">Learn more</a>
+                    <h2>Maintenance and Bug Fixing</h2>
+                    <p>I excel in providing ongoing support and maintenance for existing C# projects.</p>
+                        <a href="maintainance.html#maintain">Learn more</a>
                 </div>
             </div>
+            <a href="servicesextention.html#servicesextent" class="btn">See more</a>
         </div>
     </div>
     
-    <!-- ---------------------Portfolio----------------- -->
+    <!-- -----------------------Portfolio----------------- -->
     <div id="portfolio">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="Images/phone.png" alt="phone">
+                    <img src="Images/movie1.jpg" alt="phone">
                     <div class="layer">
-                        <h3>Hotel App</h3>
-                        <p>this app allows you to book a room for relaxation. Download it from playstore</p>
+                        <h3>Movie Store</h3>
+                        <p>The purpose of this Movie Store is to provide a platform for users to browse, 
+                            search, and rent movies.</p>
                         <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
 
