--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>Frontend</span><br>Designing webpage interfaces</li>
+                                <li><span>Frontend and Backend</span><br>Designing webpage interfaces and <br>also implementing C# for backend logic</li>
                                 <li><span>Web Development</span><br>Web app Development</li>
                                 <li><span>App Development</span><br>Building Android apps</li>
                                 <li><span>Database</span><br>Proficiency in SQL (Structured Query Language)</li>
