--- a/MyPortfolio/maintainance.html
+++ b/MyPortfolio/maintainance.html
@@ -21,7 +21,8 @@
                 C# projects. With a meticulous approach to bug fixing and optimization, I have successfully
                  diagnosed and resolved complex issues, improved application performance, and ensured the 
                  stability of critical systems. My dedication to maintaining high-quality code and providing 
-                 timely support has resulted in seamless operations for clients.</p>
+                 timely support has resulted in seamless operations for clients. 
+                  <a href="index.html#contact" style="text-decoration: none; color: #ff004f;">Let's talk</a></p>
         </div>
     </div>
         </div>
