--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -163,7 +163,7 @@
                         <a href="https://wa.link/p4p6j9"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://github.com/martinmatics100"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="Images/Martin Chukwuemeka CV2.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Images/Martin Chukwuemeka.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
