--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -59,13 +59,13 @@
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2022 (April) - current</span><br>C#.Net Traning at Decagon </li>
-                                <li><span>2021 (Sept) - 2022 (Jan)</span><br>Frontend Traning at Jexco Ltd</li>
+                                <li><span>2020 (April) - current</span><br>C#.Net Traning at Decagon </li>
+                                <!-- <li><span>2021 (Sept) - 2022 (Jan)</span><br>Frontend Traning at Jexco Ltd</li> -->
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2022</span><br>Certified software Engineer From Decagon Institute</li>
+                                <!-- <li><span>2022</span><br>Certified software Engineer From Decagon Institute</li> -->
                                 <li><span>2019</span><br>B-Tech Mathematics</li>
                                 <li><span>2012</span><br>SSCE</li>
                             </ul>
@@ -119,25 +119,30 @@
                         <h3>Movie Store</h3>
                         <p>The purpose of this Movie Store is to provide a platform for users to browse, 
                             search, and rent movies.</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/martinmatics100/Movie-App-MVC"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
 
                 </div>
                 <div class="work">
                     <img src="Images/phone.png" alt="phone">
                     <div class="layer">
-                        <h3>Hotel App</h3>
-                        <p>this app allows you to book a room for relaxation. Download it from playstore</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <h3>Contack Book Web-Api</h3>
+                        <p>An app that manages contact information using ASP.NET CORE API Framework.</p>
+                        <a href="https://github.com/martinmatics100/MyDecagonTask-Repo/tree/main/ContactBook_API-2/ExamRoom"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
 
                 </div>
                 <div class="work">
                     <img src="Images/phone.png" alt="phone">
                     <div class="layer">
-                        <h3>Hotel App</h3>
-                        <p>this app allows you to book a room for relaxation. Download it from playstore</p>
-                        <a href=""><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <h3>BASIC BANK MANAGEMENT SYSTEM</h3>
+                        <p>The “Basic Bank Management System”, a .NET (C#) 
+                            application designed to provide a fundamental
+                             understanding of bank operations and transactions. 
+                             This project focuses on essential banking features, 
+                             offering users the ability to create accounts, log in
+                              securely, perform transactions, and access account information.</p>
+                        <a href="https://github.com/martinmatics100/MyDecagonTask-Repo/tree/main/week5"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                     
                 </div>
@@ -163,7 +168,7 @@
                         <a href="https://wa.link/p4p6j9"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://github.com/martinmatics100"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="Images/Martin Chukwuemeka.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Images/NWATU MARTIN CHUKUWEMEKA.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
