--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/FB_IMG_16519582511119390-removebg-preview (1).png" alt="image">
+                    <img src="Images/Martin5.jpg" alt="image">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -168,7 +168,7 @@
                         <a href="https://wa.link/p4p6j9"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="https://github.com/martinmatics100"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="Images/NWATU MARTIN CHUKUWEMEKA.pdf" download class="btn btn2">Download CV</a>
+                    <a href="Images/NWATU MARTIN CHUKWUEMEKA.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
