--- a/MyPortfolio/services.html
+++ b/MyPortfolio/services.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/FB_IMG_16519582511119390-removebg-preview (1).png" alt="image">
+                    <img src="Images/Martin.png" alt="image">
                 </div>
         <div class="about-col-2">
             <h1 class="sub-title">Web Application Development</h1>
