--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -15,6 +15,7 @@
     <!-- class
     ========================================================================== -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/vendor.css" />
 
     <!-- favicons
     ============================================================================== -->
@@ -53,37 +54,39 @@
       <!-- site header
       ================================================================================= -->
       <header class="s-header">
-        <div class="row s-header_inner width-sixteen-col">
-          <div class="s-header_block">
-            <div class="s-header_logo">
+        <div class="row s-header__inner width-sixteen-col">
+          <div class="s-header__block">
+            <div class="s-header__logo">
               <a class="logo" href="index.html">
                 <img src="images/logo.svg" alt="Homepage" />
               </a>
             </div>
 
-            <a class="s-header_menu-toggle" href="#0"><span>Menu</span></a>
+            <a class="s-header__menu-toggle" href="#0"><span>Menu</span></a>
           </div>
-          <!-- end s-header_block -->
+          <!-- end s-header__block -->
 
-          <nav class="s-header_nav">
-            <ul class="s-header_menu-links">
-              <li><a href="#0">About</a></li>
-              <li><a href="#0">Services</a></li>
-              <li><a href="#0">My Works</a></li>
-              <li><a href="#0">Contact</a></li>
+          <nav class="s-header__nav">
+            <ul class="s-header__menu-links">
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="blog.html">Journal</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
-            <!-- end s-header_menu-links -->
+            <!-- s-header__menu-links -->
 
-            <div class="s-header_contact">
-              <a href="#0" class="btn btn--primary s-header_contact-btn"
+            <div class="s-header__contact">
+              <a
+                href="contact.html"
+                class="btn btn--primary s-header__contact-btn"
                 >Let's Work Together</a
               >
             </div>
-            <!-- end s-header_contact -->
+            <!-- s-header__contact -->
           </nav>
-          <!-- end s-header_nav -->
+          <!-- end s-header__nav -->
         </div>
-        <!-- end s-header_inner -->
+        <!-- end s-header__inner -->
       </header>
       <!-- end s-header -->
 
@@ -97,28 +100,28 @@
 
       <section id="content" class="s-content">
         <!-- intro
-        ------------------------------------------------------------------------------------------------------ -->
-
+            ----------------------------------------------- -->
         <section id="intro" class="s-intro">
-          <div class="row s-intro_content width-sixteen-col">
-            <div class="column lg-12 s-intro_content-inner grid-block">
-              <div class="s-intro_content-text">
-                <div class="s-intro_content-pretitle text-pretitle">
+          <div class="row s-intro__content width-sixteen-col">
+            <div class="column lg-12 s-intro__content-inner grid-block">
+              <div class="s-intro__content-text">
+                <div class="s-intro__content-pretitle text-pretitle">
                   Hello, I'm Martin Chukwuemeka
                 </div>
-                <h1 class="s-intro_content-title">
-                  As a software engineer,<br />
-                  I derive enjoyment from <br />
-                  creating websites for recreational purposes.
+                <h1 class="s-intro__content-title">
+                  I create marketing <br />
+                  strategies for your <br />
+                  business that get <br />
+                  results.
                 </h1>
               </div>
-              <!-- End of s-intro_content-text -->
+              <!-- s-intro__content-text -->
 
-              <div class="s-intro_content-media">
-                <div class="s-intro_content-media-inner">
+              <div class="s-intro__content-media">
+                <div class="s-intro__content-media-inner">
                   <img
                     src="images/Martin1.jpg"
-                    srcset="images/Martin1.jpg 1x, images/Martin@2x.jpg 2x"
+                    srcset="images/Martin.jpg 1x, images/Martin@2x.jpg 2x"
                     alt=""
                   />
                   <div class="lines">
@@ -126,9 +129,9 @@
                   </div>
                 </div>
               </div>
-              <!-- End of s-intro_content-media -->
+              <!-- s-intro__content-media -->
 
-              <div class="s-intro_scroll-down">
+              <div class="s-intro__scroll-down">
                 <a href="#about" class="smoothscroll">
                   <div class="scroll-icon">
                     <svg
@@ -152,32 +155,34 @@
                   <span>Scroll for more</span>
                 </a>
               </div>
-              <!-- End of s-intro_scroll-down -->
+              <!-- s-intro__scroll-down -->
             </div>
-            <!-- End of s-intro_content-inner -->
+            <!-- s-intro__content-inner -->
           </div>
-          <!-- End of s-intro_content -->
+          <!-- s-intro__content -->
         </section>
-        <!-- End of s-intro -->
+        <!-- end s-intro -->
 
-        <!-- About
-        ----------------------------------------------------------------------------------------- -->
+        <!-- about
+          ----------------------------------------------- -->
         <section id="about" class="s-about target-section">
-          <div class="row s-about_content width-sixteen-col">
+          <div class="row s-about__content width-sixteen-col">
             <div class="column grid-block grid-section-split">
               <img
                 src="images/geometric_shape.svg"
                 alt=""
-                class="s-about_content-imgbg"
+                class="s-about__content-imgbg"
               />
-              <div class="section-header grid-section-split_header">
+
+              <div class="section-header grid-section-split__header">
                 <div class="text-pretitle">About</div>
                 <h2 class="text-display-title">
-                  An inspiring headline about yourself
+                  An inspiring headline about yourself.
                 </h2>
               </div>
+              <!-- end section-header -->
 
-              <div class="s-about_content-main grid-section-split_primary">
+              <div class="s-about__content-main grid-section-split__primary">
                 <p class="attention-getter">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
@@ -209,7 +214,7 @@
               </div>
               <!-- end s-about__content-main -->
 
-              <div class="s-about_content-btn grid-section-split_bottom">
+              <div class="s-about__content-btn grid-section-split__bottom">
                 <a href="about.html" class="btn btn--stroke u-fullwidth"
                   >More About Me</a
                 >
@@ -222,11 +227,7 @@
                         width="24"
                         height="24"
                         viewBox="0 0 448 512"
-                        style="
-                          fill: rgba(0, 0, 0, 1);
-                          transform: ;
-                          -ms-filter: ;
-                        "
+                        style="fill: rgba(0, 0, 0, 1)"
                       >
                         <path
                           d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"
@@ -242,11 +243,7 @@
                         width="24"
                         height="24"
                         viewBox="0 0 512 512"
-                        style="
-                          fill: rgba(0, 0, 0, 1);
-                          transform: ;
-                          -ms-filter: ;
-                        "
+                        style="fill: rgba(0, 0, 0, 1)"
                       >
                         <path
                           d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"
@@ -262,11 +259,7 @@
                         width="24"
                         height="24"
                         viewBox="0 0 448 512"
-                        style="
-                          fill: rgba(0, 0, 0, 1);
-                          transform: ;
-                          -ms-filter: ;
-                        "
+                        style="fill: rgba(0, 0, 0, 1)"
                       >
                         <path
                           d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"
@@ -282,7 +275,7 @@
                         width="24"
                         height="24"
                         viewBox="0 0 448 512"
-                        style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
+                        style="fill: rgba(0, 0, 0, 1)"
                       >
                         <path
                           d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
@@ -296,21 +289,19 @@
               </div>
               <!-- end s-about__content-btn -->
             </div>
-            <!-- End of content-inner -->
+            <!-- content-inner -->
           </div>
-          <!-- End of s-about_content -->
         </section>
-        <!-- End of s-about -->
+        <!-- end s-about -->
 
         <!-- expertise
-        ------------------------------------------------------------------------------- -->
-
+            ----------------------------------------------- -->
         <section id="expertise" class="s-expertise">
-          <div class="row s-expertise_content width-sixteen-col">
-            <div class="column x1-12 grid-block grid-section-split">
-              <div class="section-header grid-section-split_header">
-                <div class="text-display-title">Expertise</div>
-                <h2 class="text-display-title">Mykey areas of expertise.</h2>
+          <div class="row s-expertise__content width-sixteen-col">
+            <div class="column xl-12 grid-block grid-section-split">
+              <div class="section-header grid-section-split__header">
+                <div class="text-pretitle">Expertise</div>
+                <h2 class="text-display-title">My key areas of expertise.</h2>
 
                 <p class="lead">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -320,7 +311,7 @@
                   similique.
                 </p>
               </div>
-              <!-- End of section-header -->
+              <!-- end section-header -->
 
               <div class="s-expertise_content-main grid-section-split_primary">
                 <div class="grid-list-items list-items show-ctr">
@@ -391,6 +382,7 @@
                 <!-- grid-list-items -->
               </div>
               <!-- end s-expertise__content-main -->
+
               <div class="s-expertise_content-btn grid-section-split_bottom">
                 <a href="services.html" class="btn btn--stroke u-fullwidth"
                   >View All Services</a
@@ -398,17 +390,14 @@
               </div>
               <!-- end s-about__content-btn -->
             </div>
-            <!-- End of grid-block -->
+            <!-- end grid-block-->
           </div>
-          <!-- End of s-expertise_content -->
+          <!-- end s-expertise__content -->
         </section>
-        <!-- End of s-expertise -->
-
-        <!-- Clients
-        -------------------------------------------------------------------------------- -->
+        <!-- end s-expertise -->
 
         <!-- clients
-            ----------------------------------------------- -->
+          ----------------------------------------------- -->
         <section id="clients" class="s-clients">
           <div class="row s-clients__content-block width-sixteen-col">
             <div class="column xl-12 grid-block grid-section-split">
@@ -826,7 +815,7 @@
                     width="24"
                     height="24"
                     viewBox="0 0 448 512"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; -ms-filter: "
+                    style="fill: rgba(0, 0, 0, 1)"
                   >
                     <path
                       d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64h98.2V334.2H109.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H255V480H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64z"
@@ -842,7 +831,7 @@
                     width="24"
                     height="24"
                     viewBox="0 0 512 512"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; -ms-filter: "
+                    style="fill: rgba(0, 0, 0, 1)"
                   >
                     <path
                       d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"
@@ -858,7 +847,7 @@
                     width="24"
                     height="24"
                     viewBox="0 0 448 512"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; -ms-filter: "
+                    style="fill: rgba(0, 0, 0, 1)"
                   >
                     <path
                       d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"
@@ -874,7 +863,7 @@
                     width="24"
                     height="24"
                     viewBox="0 0 448 512"
-                    style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
+                    style="fill: rgba(0, 0, 0, 1)"
                   >
                     <path
                       d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
@@ -925,5 +914,10 @@
       <!-- end s-footer -->
     </div>
     <!-- end of page wrap -->
+
+    <!-- Java Script
+    ==================================================================== -->
+    <script src="js/main.js"></script>
+    <!-- <script src="js/plugins.js"></script> -->
   </body>
 </html>
