--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -168,11 +168,11 @@
         <section id="about" class="s-about target-section">
           <div class="row s-about__content width-sixteen-col">
             <div class="column grid-block grid-section-split">
-              <img
+              <!-- <img
                 src="images/geometric_shape.svg"
                 alt=""
                 class="s-about__content-imgbg"
-              />
+              /> -->
 
               <div class="section-header grid-section-split__header">
                 <div class="text-pretitle">About</div>
