--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -188,8 +188,8 @@
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
                   aperiam ipsum optio magni vel inventore voluptatibus nisi
                   maiores laboriosam fuga iure, velit eligendi ab vero minima?
-                  Quae ducimus ab dignissimos iure, eos consequatur est deleniti
-                  cum id aliquid neque.
+                  Quae ducimus ab dignissimos iure, eos consequatur est
+                  delenitihch cum id aliquid neque.
                 </p>
 
                 <p class="attention-getter">
