--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -198,7 +198,7 @@
                   velit reiciendis iure laudantium. Praesentium repellat
                   corrupti dolor sit sint obcaecati. Modi aut quo molestiae a
                   explicabo maiores necessitatibus nemo repellendus architecto?
-                  Corrupti numquam ullam nostrum, eveniet at doloribus
+                  Corrupti numquam ullam nostrum, eveniet at dolhfyuoribus
                   blanditiis aliquid a est porro aspernatur pariatur culpa
                   soluta nesciunt odio quasi maxime debitis illum.
                 </p>
