--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -207,9 +207,9 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
                   aperiam ipsum optio magni vel inventore voluptatibus nisi
-                  maiores laboriosam fuga iure, velit eligendi ab vero minima?
-                  Quae ducimus ab dignissimos iure, eos consequatur est deleniti
-                  cum id aliquid neque.
+                  maiores laboriosam fuga iure, velit eligendi ab verofef
+                  minima? Quae ducimus ab dignissimos iure, eos consequatur est
+                  deleniti cum id aliquid neque.
                 </p>
               </div>
               <!-- end s-about__content-main -->
