--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -184,7 +184,7 @@
 
               <div class="s-about__content-main grid-section-split__primary">
                 <p class="attention-getter">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amxbbaet consectetur adipisicing elit.
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
                   aperiam ipsum optio magni vel inventore voluptatibus nisi
                   maiores laboriosam fuga iure, velit eligendi ab vero minima?
