--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -206,8 +206,8 @@
                 <p class="attention-getter">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
-                  aperiam ipsum optio magni vel inventore voluptatibus nisi
-                  maiores laboriosam fuga iure, velit eligendi ab verofef
+                  aperiam ipsum optio magni vebdisdgihl inventore voluptatibus
+                  nisi maiores laboriosam fuga iure, velit eligendi ab verofef
                   minima? Quae ducimus ab dignissimos iure, eos consequatur est
                   deleniti cum id aliquid neque.
                 </p>
