--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -208,7 +208,7 @@
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
                   aperiam ipsum optio magni vebdisdgihl inventore voluptatibus
                   nisi maiores laboriosam fug,sc ,xs lxa iure, velit eligendi ab
-                  verofef minima? Quae ducimus ab dignissimos iure, eos
+                  verofef minima? Quae ducimus ab dignidnfnmssimos iure, eos
                   consequatur est deleniti cum id aliquid neque.
                 </p>
               </div>
