--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -207,9 +207,9 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Repellendus iste ipsam quod repellat. Hic tempora ullam
                   aperiam ipsum optio magni vebdisdgihl inventore voluptatibus
-                  nisi maiores laboriosam fug,sc ,xs lxa iure, velit eligendi ab
-                  verofef minima? Quae ducimus ab dignidnfnmssimos iure, eos
-                  consequatur est deleniti cum id aliquid neque.
+                  nisi maiores laboriosam fuqsiugkGHZkg,sc ,xs lxa iure, velit
+                  eligendi ab verofef minima? Quae ducimus ab dignidnfnmssimos
+                  iure, eos consequatur est deleniti cum id aliquid neque.
                 </p>
               </div>
               <!-- end s-about__content-main -->
