--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -337,10 +337,11 @@
                     <div class="grid-list-items_text list-items_item-text">
                       <p>
                         Rerum quam quos. Quibusdam quis autem voluptatibus earum
-                        vel ex error ea magni. Aut asperiores sit mollitia. Rem
-                        neque et voluptatem eos quia sed eligendi et. Eaque
-                        velit eligendi ut magnam. Cumque ducimus laborum
-                        doloribus facere maxime vel earum quidem enim suscipit.
+                        vel ex error ea magni. Aut asperiores xbzkxbksit
+                        mollitia. Rem neque et voluptatem eos quia sed eligendi
+                        et. Eaque velit eligendi ut magnam. Cumque ducimus
+                        laborum doloribus facere maxime vel earum quidem enim
+                        suscipit.
                       </p>
                     </div>
                   </div>
