--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -353,7 +353,7 @@
                     <div class="grid-list-items_text list-items_item-text">
                       <p>
                         Eaque velit eligend. iQuibusdam quis autem voluptatibus
-                        earum vel ex error ea magni. Rerum quam quos. Aut
+                        earum vel ex error ea magni. Rerzxbkbkum quam quos. Aut
                         asperiores sit mollitia. Rem neque et voluptatem eos
                         quia sed eligendi et. Eaque velit eligendi ut magnam.
                         Cumque ducimus laborum doloribus facere maxime vel earum
