--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -373,8 +373,9 @@
                         Quibusdam quis autem voluptatibus earum vel ex error ea
                         magni. Rerum quam quos. Aut asperiores sit mollitia. Rem
                         neque et voluptatem eos quia sed eligendi et. Eaque
-                        velit eligendi ut magnam. Cumque ducimus laborum
-                        doloribus facere maxime vel earum quidem enim suscipit.
+                        velit eligendi ut magnam. Cuas,bdxkasnmque ducimus
+                        laborum doloribus facere maxime vel earum quidem enim
+                        suscipit.
                       </p>
                     </div>
                   </div>
