--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -373,7 +373,7 @@
                         Quibusdam quis autem voluptatibus earum vel ex error ea
                         magni. Rerum quam quos. Aut asperiores sit mollitia. Rem
                         neque et voluptatem eos quia sed eligendi et. Eaque
-                        velit eligendi ut magnam. Cuas,bdxkasnmque ducimus
+                        velit eligendi ut magnam. Cuas,bdxkasnjdbgmque ducimus
                         laborum doloribus facere maxime vel earum quidem enim
                         suscipit.
                       </p>
