--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -354,10 +354,10 @@
                       <p>
                         Eaque velit eligend. iQuibusdam quis autem voluptatibus
                         earum vel ex error ea magni. Rerzxbkbkum quam quos. Aut
-                        asperiores sit mollitia. Rem neque et voluptatem eos
-                        quia sed eligendi et. Eaque velit eligendi ut magnam.
-                        Cumque ducimus laborum doloribus facere maxime vel earum
-                        quidem enim suscipit.
+                        asperiores sit mollitikbkghkha. Rem neque et voluptatem
+                        eos quia sed eligendi et. Eaque velit eligendi ut
+                        magnam. Cumque ducimus laborum doloribus facere maxime
+                        vel earum quidem enim suscipit.
                       </p>
                     </div>
                   </div>
