--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -550,8 +550,8 @@
                     <p>
                       Voluptas tempore rem. Molestiae incidunt consequatur quis
                       ipsa autem nam sit enim magni. Explicabo a quaerat sint
-                      autem dolore ducimus ut consequatur neque. Nisi dolores
-                      quaerat fuga rem nihil nostrum. Laudantium quia
+                      autem dolore duncvjvdcimus ut consequatur neque. Nisi
+                      dolores quaerat fuga rem nihil nostrum. Laudantium quia
                       consequatur molestias.
                     </p>
                     <div class="testimonials__author">
