--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -199,8 +199,9 @@
                   corrupti dolor sit sint obcaecati. Modi aut quo molestiae a
                   explicabo maiores necessitatibus nemo repellendus architecto?
                   Corrupti numquam ullam nostrum, eveniet at dolhfyuoribus
-                  blanditiis aliquid a est porro aspernatur pariatur culpa
-                  soluta nesciunt odio quasi maxime debitis illum.
+                  blanditiis aliquid a est poribjgiudsguysdgro aspernatur
+                  pariatur culpa soluta nesciunt odio quasi maxime debitis
+                  illum.
                 </p>
 
                 <p class="attention-getter">
