--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -374,9 +374,9 @@
                         Quibusdam quis autem voluptatibus earum vel ex error ea
                         magni. Rerum quam quos. Aut asperiores sit mollitia. Rem
                         neque et voluptatem eos quia sed eligendi et. Eaque
-                        velit eligendi ut magnam. Cuas,bdxkasnjdbgmque ducimus
-                        laborum doloribus facere maxime vel earum quidem enim
-                        suscipit.
+                        velit eligendi ut magnam. Cuasbdskghkh,bdxkasnjdbgmque
+                        ducimus laborum doloribus facere maxime vel earum quidem
+                        enim suscipit.
                       </p>
                     </div>
                   </div>
