--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -415,12 +415,12 @@
 
               <div class="grid-section-split__primary">
                 <p class="lead">
-                  Quibusdam quis autem voluptatibus earum vel ex error ea. Lorem
-                  ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                  suscipit debitis quam dignissimos dkshdhveritatis atque
-                  pariatur magnam obcaecati fugit reprehenderit vel numquam
-                  facere esse est deserunt, perferendis commodi voluptatem
-                  similique.
+                  Quibusdam quis autem voluptatibus earunvjvum vel ex error ea.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Laborum suscipit debitis quam dignissimos dkshdhveritatis
+                  atque pariatur magnam obcaecati fugit reprehenderit vel
+                  numquam facere esse est deserunt, perferendis commodi
+                  voluptatem similique.
                 </p>
 
                 <p>
