--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -340,9 +340,9 @@
                         Rerum quam quos. Quibusdam quis autem voluptatibus earum
                         vel ex error ea magni. Aut asperiores xbzkxbksit
                         mollitia. Rem neque et voluptatem eos quia sed eligendi
-                        et. Eaque velit eligendi ut magnam. Cumque ducimus
-                        laborum doloribus facere maxime vel earum quidem enim
-                        suscipit.
+                        et. Eaque velit eligendi ufhfgfdgdt magnam. Cumque
+                        ducimus laborum doloribus facere maxime vel earum quidem
+                        enim suscipit.
                       </p>
                     </div>
                   </div>
