--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -570,9 +570,9 @@
                   <div class="testimonials__slide swiper-slide">
                     <p>
                       Molestiae incidunt consequatur quis ipsa autem nam sit
-                      enim magni. Voluptas tempore rem. Explicabo a quaerat sint
-                      autem dolore ducimus ut consequatur neque. Nisi dolores
-                      quaerat fuga rem nihil nostrum. Laudantium quia
+                      enim magni. Voluptas temfggfgpore rem. Explicabo a quaerat
+                      sint autem dolore ducimus ut consequatur neque. Nisi
+                      dolores quaerat fuga rem nihil nostrum. Laudantium quia
                       consequatur molestias.
                     </p>
                     <div class="testimonials__author">
