--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -615,7 +615,7 @@
               <p class="lead">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis
                 rem, esse doloribus sint eaque at debitis enim vitae minus
-                expedita ratione dignissimos sit nostrum optio sequi. Ipsa at
+                expedita ratione dignissimos sit nosgfftrum optio sequi. Ipsa at
                 beatae quam.
               </p>
               <a href="contact.html" class="btn btn--primary"
