--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -751,7 +751,7 @@
             <h3>About Monica</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-              illum quasi facere libero, fugiat laboriosam possimus
+              illum quasi facere libero, fugifgiiysjfgdsugat laboriosam possimus
               reprehenderit eveniet vero voluptatum fugit ad quis veritatis
               suscipit beatae incidunt perferendis tempore earum hic repellendus
               quisquam recusandae ipsa id esse. Nobis, aut deleniti. Lorem ipsum
