--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -755,8 +755,8 @@
               reprehenderit eveniet vero voluptatum fugit ad quis veritatis
               suscipit beatae incidunt perferendis tempore earum hic repellendus
               quisquam recusandae ipsa id esse. Nobis, aut deleniti. Lorem ipsum
-              dolor sit amet consectetur, adipisicing elit. Facere ratione
-              dignissimos.
+              dolor sit amet consectetur, dvsajdvjjadipisicing elit. Facere
+              ratione dignissimos.
             </p>
           </div>
           <div
