--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -780,8 +780,8 @@
             <h3>Newsletter</h3>
 
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere
-              ratione dignissimos.
+              Lorem ipsum dolor sit amet consechfhfjtetur, adipisicing elit.
+              Facere ratione dignissimos.
             </p>
 
             <div class="subscribe-form">
