--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -683,9 +683,9 @@
                   <p>
                     Rerum quam quos. Quibusdam quis autem voluptatibus earum vel
                     ex error ea magni. Aut asperiores sit mollitia. Rem neque et
-                    voluptatem eos quia sed eligendi et. Eaque velit eligendi ut
-                    magnam. Cumque ducimus laborum doloribus facere maxime vel
-                    earum quidem enim suscipit.
+                    voluptatem eos quia sed eligendi et. EaqKBKBIue velit
+                    eligendi ut magnam. Cumque ducimus laborum doloribus facere
+                    maxime vel earum quidem enim suscipit.
                   </p>
                 </div>
               </div>
