--- a/Portfolio_1/index.html
+++ b/Portfolio_1/index.html
@@ -684,8 +684,8 @@
                     Rerum quam quos. Quibusdam quis autem voluptatibus earum vel
                     ex error ea magni. Aut asperiores sit mollitia. Rem neque et
                     voluptatem eos quia sed eligendi et. EaqKBKBIue velit
-                    eligendi ut magnam. Cumque ducimus laborum doloribus facere
-                    maxime vel earum quidem enim suscipit.
+                    eligendi ut magnam. Cumque ducimus laborum dolorvfdgdsgdibus
+                    facere maxime vel earum qufdgdfgfgidem enim suscipit.
                   </p>
                 </div>
               </div>
