--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -70,7 +70,7 @@
               to bring my skills, experience, and dedication to contribute to
               the success of dynamic projects and to continue pushing the
               boundaries of what is possible in the world of software
-              development.
+              development..
             </p>
             <div class="btn-con">
               <a
