--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -286,7 +286,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
               quasi vero fugit.
             </p>
-          </div> -->
+          </div> ------>
         </div>
       </section>
 
