--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -435,6 +435,87 @@
           </div>
         </div>
       </section>
+
+      <section class="container" id="services">
+        <div class="services-content">
+          <div class="main-title">
+            <h2>
+              My<span>Services</span><span class="bg-text">Services</span>
+            </h2>
+          </div>
+
+          <div class="services">
+            <div class="service">
+              <img src="images/port6.jpg" alt="" />
+              <div class="service-text">
+                <h4>How to Create Your Own Website</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+              </div>
+            </div>
+            <div class="service">
+              <img src="images/blog1.jpg" alt="" />
+              <div class="service-text">
+                <h4>How to Become an Expert in Web Design</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+              </div>
+            </div>
+            <div class="service">
+              <img src="images/blog2.jpg" alt="" />
+              <div class="service-text">
+                <h4>Become a Web Designer in 10 Days</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+              </div>
+            </div>
+            <div class="service">
+              <img src="images/blog3.jpg" alt="" />
+              <div class="service-text">
+                <h4>Debbuging made easy with Web Inspector</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+              </div>
+            </div>
+            <div class="service">
+              <img src="images/port1.jpg" alt="" />
+              <div class="service-text">
+                <h4>Get started with Web Design and UI Design</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+              </div>
+            </div>
+            <div class="service">
+              <img src="images/port3.jpg" alt="" />
+              <div class="service-text">
+                <h4>This is what you need to know about Web Design</h4>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="container contact" id="contact">
+        <div class="contact-container">
+          <div class="main-title">
+            <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div class="controls">
