--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -70,7 +70,7 @@
               to bring my skills, experience, and dedication to contribute to
               the success of dynamic projects and to continue pushing the
               boundaries of what is possible in the world of software
-              development..
+              development.
             </p>
             <div class="btn-con">
               <a
@@ -513,6 +513,23 @@
         <div class="contact-container">
           <div class="main-title">
             <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
+          </div>
+          <div class="contact-content-con">
+            <div class="left-contact">
+              <h4>Contact me here</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
+                laborum numquam? Quam excepturi perspiciatis quas quasi.
+              </p>
+              <div class="contact-info">
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span>Location</span>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
