--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -500,7 +500,7 @@
               <div class="service-text">
                 <h4>This is what you need to know about Web Design</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Loremfufu ipsum dolor sit, amet consectetur adipisicing elit.
                   Doloribus natus voluptas, eos obcaecati recusandae amet?
                 </p>
               </div>
