--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -527,8 +527,89 @@
                     <i class="fa-solid fa-location-dot"></i>
                     <span>Location</span>
                   </div>
+                  <p>: Lagos, Nigeria</p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-envelope"></i>
+                    <span>Email</span>
+                  </div>
+                  <p>
+                    <span>: martinchukwuemeka67@gmail.com</span>
+                  </p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-user-graduate"></i>
+                    <span>Education</span>
+                  </div>
+                  <p>
+                    <span>: Federal University Of Technology, Owerri</span>
+                  </p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fa-solid fa-phone"></i>
+                    <span>Mobile Number</span>
+                  </div>
+                  <p>
+                    <span>: 09131518262</span>
+                  </p>
+                </div>
+                <div class="contact-item">
+                  <div class="icon">
+                    <i class="fas fa-globe-africa"></i>
+                    <span>Languages</span>
+                  </div>
+                  <p>
+                    <span>: English, Igbo</span>
+                  </p>
                 </div>
               </div>
+              <div class="contact-icons">
+                <div class="contact-icon">
+                  <a href="www.facebook.com" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#" target="_blank">
+                    <i class="fa-brands fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="right-contact">
+              <form action="" class="contact-form">
+                <div class="input-control i-c-2">
+                  <input type="text" placeholder="YOUR NAME" required />
+                  <input type="text" placeholder="YOUR EMAIL" required />
+                </div>
+                <div class="input-control">
+                  <input type="text" placeholder="ENTER SUBJECT" required />
+                </div>
+                <div class="input-control">
+                  <textarea
+                    name=""
+                    id=""
+                    cols="15"
+                    rows="8"
+                    placeholder="Message Here...."
+                  ></textarea>
+                </div>
+                <div class="submit-btn">
+                  <a href="#" class="main-btn">
+                    <span class="btn-text">Download CV</span>
+                    <span class="btn-icon"
+                      ><i class="fas fa-download"></i
+                    ></span>
+                  </a>
+                </div>
+              </form>
             </div>
           </div>
         </div>
