--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -544,7 +544,7 @@
                     <span>Education</span>
                   </div>
                   <p>
-                    <span>: Federal University Of Technology, Owerri</span>
+                    <span>: Federal University Of Technology, Owerri.</span>
                   </p>
                 </div>
                 <div class="contact-item">
