--- a/Second-Portfolio/index.html
+++ b/Second-Portfolio/index.html
@@ -448,11 +448,10 @@
             <div class="service">
               <img src="images/port6.jpg" alt="" />
               <div class="service-text">
-                <h4>How to Create Your Own Website</h4>
+                <h4>Web Application Development</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
+                  I specialize in developing robust and interactive web applications using C# and industry-leading frameworks like ASP.NET, ASP.NET Core, or Blazor. With a focus on delivering exceptional user experiences, I have built feature-rich web applications that seamlessly integrate with databases, implement secure authentication mechanisms, and leverage responsive designs for optimal performance across devices.
+            </p>
               </div>
             </div>
             <div class="service">
@@ -525,51 +524,53 @@
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fa-solid fa-location-dot"></i>
-                    <span>Location</span>
+                    <span>Location :</span>
                   </div>
-                  <p>: Lagos, Nigeria</p>
+                  <p>Lagos, Nigeria</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fa-solid fa-envelope"></i>
-                    <span>Email</span>
+                    <span>Email :</span>
                   </div>
                   <p>
-                    <span>: martinchukwuemeka67@gmail.com</span>
+                    <span> martinchukwuemeka67@gmail.com</span>
                   </p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fa-solid fa-user-graduate"></i>
-                    <span>Education</span>
+                    <span>Education :</span>
                   </div>
                   <p>
-                    <span>: Federal University Of Technology, Owerri.</span>
+                    <span title="Federal University Of Technology, Owerri"></span>
+                      F.U.T.O</span
+                    >
                   </p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fa-solid fa-phone"></i>
-                    <span>Mobile Number</span>
+                    <span>Mobile Number :</span>
                   </div>
                   <p>
-                    <span>: 09131518262</span>
+                    <span> 09131518262</span>
                   </p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
                     <i class="fas fa-globe-africa"></i>
-                    <span>Languages</span>
+                    <span>Languages :</span>
                   </div>
                   <p>
-                    <span>: English, Igbo</span>
+                    <span> English, Igbo</span>
                   </p>
                 </div>
               </div>
               <div class="contact-icons">
                 <div class="contact-icon">
                   <a href="www.facebook.com" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
                   </a>
                   <a href="#" target="_blank">
                     <i class="fa-brands fa-twitter"></i>
@@ -601,13 +602,18 @@
                     placeholder="Message Here...."
                   ></textarea>
                 </div>
-                <div class="submit-btn">
-                  <a href="#" class="main-btn">
+                <div class="submit-control">
+                  <input type="submit" value="submit">
+                </div>
+                <div class="btn-con">
+                  <a href="" class="main-btn">
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"
                       ><i class="fas fa-download"></i
                     ></span>
                   </a>
+
+                  
                 </div>
               </form>
             </div>
